--- a/covid-19.html
+++ b/covid-19.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ನಮ್ಮ ಕೊಟ್ಟೂರು</title>
+	<title>ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="icon" href="img/sri.jpg">
 	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 		<nav>
 			<a href="home.html">ನಮ್ಮ ಊರು</a>
       <a href="news.html">ಸುದ್ದಿ</a>
-			<a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
+      <a href="covid-19.html" class="active">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
       <a href="places.html">ಸ್ಥಳಗಳು</a>
       <a href="localgov.html">ಸರ್ಕಾರ(ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ)</a>
       <a href="business.html"> ಅಂಗಡಿಗಳು </a>
@@ -29,10 +29,28 @@
 	</header>
 	<main>
 			<aside class = "left">
-        <p></p>
+        <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
+          <li></li>
+        </ul>
 
 			</aside>
 			<section class="right">
+        <h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
+          <ul>
+            <li><a href="covidtwitter.html">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
+              <ul>
+                
+              </ul>
+            </li>
+            <li><a href="https://covid19.who.int/">WHO COVID Tracker</a></li>
+            <li><a href="https://www.mygov.in/covid-19/">Gov of India Tracker</a></li>
+            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li>
+          </ul>
+
+        <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
+        <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
+        <h2 id="other">ಇತರೆ</h2>
+
 
 			</section>
 	</main>
