--- a/covid-19.html
+++ b/covid-19.html
@@ -37,17 +37,22 @@
 			<section class="right">
         <h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
           <ul>
-            <li><a href="covidtwitter.html">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
+            <li><a href="covidtwitter.html" target="_blank">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
               <ul>
-                
+
               </ul>
             </li>
-            <li><a href="https://covid19.who.int/">WHO COVID Tracker</a></li>
-            <li><a href="https://www.mygov.in/covid-19/">Gov of India Tracker</a></li>
-            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li>
+            <li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li>
+            <li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li>
+            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li>
+						<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li>
           </ul>
 
         <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
+
+				<p><img src="img/c19homecarek.png" alt="Home care guidlines for covid19" class="imgzoom">
+					<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
+					<p><a href="img/Kannada_final.pdf">Download</a>Covid care for low resource setting </p>
         <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
         <h2 id="other">ಇತರೆ</h2>
 
