--- a/covid-19.html
+++ b/covid-19.html
@@ -30,7 +30,10 @@
 	<main>
 			<aside class = "left">
         <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
-          <li></li>
+          <li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li>
+					<li><a href="#announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳ</a> </li>
+					<li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li>
+					<li><a href="#other">ಇತರೆ</a> </li>
         </ul>
 
 			</aside>
@@ -59,9 +62,9 @@
 
 			</section>
 	</main>
-  <footer>
+	<footer>
     <p>About us</p>
-    <p> This page was created by  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup></i></p>
+    <p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p>
     <details close>
       <summary>Sources for the information on page</summary>
       <p></p>
@@ -82,7 +85,7 @@
     </details>
 
     <address id="adr">
-      our office address
+
     </address>
 
   </footer>
