--- a/covid-19.html
+++ b/covid-19.html
@@ -29,10 +29,10 @@
 	</header>
 	<main>
 			<aside class = "left">
-        <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
-          <li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li>
-					<li><a href="#announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳ</a> </li>
-					<li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li>
+        <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a> <br> <br> <br>
+          <li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li> <br>
+					<li><a href="#announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳ</a> </li> <br>
+					<li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li> <br>
 					<li><a href="#other">ಇತರೆ</a> </li>
         </ul>
 
@@ -44,19 +44,26 @@
               <ul>
 
               </ul>
-            </li>
-            <li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li>
-            <li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li>
-            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li>
-						<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li>
+            </li> <br>
+            <li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li> <br>
+            <li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li> <br>
+            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li> <br>
+						<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li> <br>
           </ul>
 
         <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
 
 				<p><img src="img/c19homecarek.png" alt="Home care guidlines for covid19" class="imgzoom">
 					<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
-					<p><a href="img/Kannada_final.pdf">Download</a>Covid care for low resource setting </p>
+					<p><a href="img/Kannada_final.pdf">Download pdf</a>  Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </p>
         <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
+					<p><a href="8660030840" target="_blank">Call</a> Matru Clinic, Dr.Prashanth.G <sub>M.B.B.S.</sub> on 8660030840</p> <br>
+					<details close>
+						<summary>ವಿಳಾಸ(address)</summary>
+						<p>ಮಾತೃ ಕ್ಲಿನಿಕ್, <br> ಗೌಡ್ರು ಓಣಿ, <br> ಜೈನ ದೇವಸ್ಥಾನ ಮತ್ತು ದಾವಣಗೆರೆ ಬಟ್ಟೆ ಅಂಗಡಿ ಹಿಂದೆ, <br> ಹಳೇ ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ ಹತ್ತಿರ, <br> ಕೊಟ್ಟೂರು - 583134 </p> <br> <br> <br>
+						
+
+					</details>
         <h2 id="other">ಇತರೆ</h2>
 
 
