--- a/covid-19.html
+++ b/covid-19.html
@@ -57,11 +57,11 @@
 					<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
 					<p><a href="img/Kannada_final.pdf">Download pdf</a>  Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </p>
         <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
-					<p><a href="8660030840" target="_blank">Call</a> Matru Clinic, Dr.Prashanth.G <sub>M.B.B.S.</sub> on 8660030840</p> <br>
+					<p><a href="tel:+918660030840" target="_blank"> Call </a> Matru Clinic, Dr.Prashanth.G <sub>M.B.B.S.</sub> on 8660030840</p> <br>
 					<details close>
 						<summary>ವಿಳಾಸ(address)</summary>
 						<p>ಮಾತೃ ಕ್ಲಿನಿಕ್, <br> ಗೌಡ್ರು ಓಣಿ, <br> ಜೈನ ದೇವಸ್ಥಾನ ಮತ್ತು ದಾವಣಗೆರೆ ಬಟ್ಟೆ ಅಂಗಡಿ ಹಿಂದೆ, <br> ಹಳೇ ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ ಹತ್ತಿರ, <br> ಕೊಟ್ಟೂರು - 583134 </p> <br> <br> <br>
-						
+
 
 					</details>
         <h2 id="other">ಇತರೆ</h2>
