--- a/covid-19.html
+++ b/covid-19.html
@@ -40,15 +40,15 @@
 			<section class="right">
         <h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
           <ul>
-            <li><a href="covidtwitter.html" target="_blank">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
-              <ul>
-
-              </ul>
-            </li> <br>
             <li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li> <br>
             <li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li> <br>
             <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li> <br>
 						<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li> <br>
+						<li><a href="covidtwitter.html" target="_blank">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
+              <ul>
+
+              </ul>
+            </li> <br>
           </ul>
 
         <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
@@ -57,8 +57,8 @@
 					<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
 					<p><a href="img/Kannada_final.pdf">Download pdf</a>  Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </p>
         <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
-					<p><a href="tel:+918660030840" target="_blank"> Call </a> Matru Clinic, Dr.Prashanth.G <sub>M.B.B.S.</sub> on 8660030840</p> <br>
-					<details close>
+					<p><a href="tel:+918660030840" target="_blank"> Call us: </a><br> Matru Clinic,<br> <span id="name">Dr.Prashanth.G <sub>M.B.B.S.</sub></span> </p>
+					<details open>
 						<summary>ವಿಳಾಸ(address)</summary>
 						<p>ಮಾತೃ ಕ್ಲಿನಿಕ್, <br> ಗೌಡ್ರು ಓಣಿ, <br> ಜೈನ ದೇವಸ್ಥಾನ ಮತ್ತು ದಾವಣಗೆರೆ ಬಟ್ಟೆ ಅಂಗಡಿ ಹಿಂದೆ, <br> ಹಳೇ ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ ಹತ್ತಿರ, <br> ಕೊಟ್ಟೂರು - 583134 </p> <br> <br> <br>
 
