clinic profile pic

--- a/covid-19.html
+++ b/covid-19.html
@@ -30,45 +30,60 @@
 	<main>
 			<aside class = "left">
         <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a> <br> <br> <br>
-          <li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li> <br>
 					<li><a href="#announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳ</a> </li> <br>
 					<li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li> <br>
+					<li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li> <br>
 					<li><a href="#other">ಇತರೆ</a> </li>
         </ul>
 
 			</aside>
 			<section class="right">
-        <h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
-          <ul>
-            <li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li> <br>
-            <li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li> <br>
-            <li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li> <br>
-						<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li> <br>
-						<li><a href="covidtwitter.html" target="_blank">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
-              <ul>
-
-              </ul>
-            </li> <br>
-          </ul>
-
         <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
+						<p><img src="img/c19homecarek.png" alt="Home care guidlines for covid19" class="imgzoom">
+						<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
+						<p><a href="img/Kannada_final.pdf">Download pdf</a>  Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </p>
+				<hr>
+				<h2 id="c19hospital" style="text-decoration: underline;">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
+				 	<div class="clinic">
+						<div class="clm-1-1-1">
+							<p><a href="tel:+918660030840" target="_blank">
+								<i class="fas fa-phone-alt"></i> Call us: </a><br>
+								Matru Clinic,<br>
+								<span id="name">Dr.Prashanth.G <sub>M.B.B.S.</sub></span>
+							</p>
+							<details open>
+								<summary>ವಿಳಾಸ(address)</summary>
+								<p>ಮಾತೃ ಕ್ಲಿನಿಕ್, <br>
+									ಗೌಡ್ರು ಓಣಿ, <br>
+									ಜೈನ ದೇವಸ್ಥಾನ ಮತ್ತು ದಾವಣಗೆರೆ ಬಟ್ಟೆ ಅಂಗಡಿ ಹಿಂದೆ, <br>
+									ಹಳೇ ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ ಹತ್ತಿರ, <br>
+									ಕೊಟ್ಟೂರು - 583134 </p>
+							</details>
+						</div>
+						<div class="clm-1-2">
+							<img src="img/clinic/001/DrG.png" alt="Dr Prashanth" class="profilepic">
+						</div>
+				 	</div>
+				<hr>
+				<h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
+						<ul>
+							<li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li> <br>
+							<li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li> <br>
+							<li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li> <br>
+							<li><a href="https://www.cowin.gov.in/" target="_blank">Book slot for Vaccination</a></li> <br>
+							<li><a href="covidtwitter.html" target="_blank">ಸರ್ಕಾರದ ಟ್ವಿಟರ್ ಖಾತೆಗಳು</a>
+								<ul>
 
-				<p><img src="img/c19homecarek.png" alt="Home care guidlines for covid19" class="imgzoom">
-					<a href="img/c19homecarek.png" target="_blank">Download the image</a> </p>
-					<p><a href="img/Kannada_final.pdf">Download pdf</a>  Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </p>
-        <h2 id="c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
-					<p><a href="tel:+918660030840" target="_blank"> Call us: </a><br> Matru Clinic,<br> <span id="name">Dr.Prashanth.G <sub>M.B.B.S.</sub></span> </p>
-					<details open>
-						<summary>ವಿಳಾಸ(address)</summary>
-						<p>ಮಾತೃ ಕ್ಲಿನಿಕ್, <br> ಗೌಡ್ರು ಓಣಿ, <br> ಜೈನ ದೇವಸ್ಥಾನ ಮತ್ತು ದಾವಣಗೆರೆ ಬಟ್ಟೆ ಅಂಗಡಿ ಹಿಂದೆ, <br> ಹಳೇ ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ ಹತ್ತಿರ, <br> ಕೊಟ್ಟೂರು - 583134 </p> <br> <br> <br>
-
-
-					</details>
-        <h2 id="other">ಇತರೆ</h2>
+								</ul>
+							</li> <br>
+						</ul>
+				<hr>
+				<h2 id="other">ಇತರೆ</h2>
 
 
 			</section>
 	</main>
+	<hr>
 	<footer>
     <p>About us</p>
     <p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p>
@@ -96,5 +111,6 @@
     </address>
 
   </footer>
+	<hr>
 </body>
 </html>
