--- a/covid-19.html
+++ b/covid-19.html
@@ -63,6 +63,11 @@
 							<img src="img/clinic/001/DrG.png" alt="Dr Prashanth" class="profilepic">
 						</div>
 				 	</div>
+					<hr>
+					<div class="clinic">
+						<p>Medication & Covid Rapid Antigen Test (RAT) is avilable <a href="tel:+918660030840" target="_blank">Call</a> </p>
+
+					</div>
 				<hr>
 				<h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
 						<ul>
