--- a/covid-19.html
+++ b/covid-19.html
@@ -60,7 +60,7 @@
 							</details>
 						</div>
 						<div class="clm-1-2">
-							<img src="img/clinic/001/DrG.png" alt="Dr Prashanth" class="profilepic">
+							<img src="img/clinic/001/DrG1.1.png" alt="Dr Prashanth" class="profilepic">
 						</div>
 				 	</div>
 					<hr>
