--- a/covid-19.html
+++ b/covid-19.html
@@ -39,8 +39,17 @@
 			</aside>
 			<section class="right">
         <h2 id="announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳು</h2>
+					<details open>
+						<summary>Kannada</summary>
 						<p><a href="img/c19homecarek.png" target="_blank"><img src="img/c19homecarek.png" alt="Home care guidlines for covid19" class="imgzoom"></a></p>
 						<p><a href="img/Kannada_final.pdf" target="_blank"> Covid care for low resource setting (ಕಡಿಮೆ ಸಂಪನ್ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಾಗಿ ಕೋವಿಡ್ ಆರೈಕೆ) </a></p>
+					</details>
+					<details close>
+						<summary>English</summary>
+						<p><a href="img/c19homecareE.jpg" target="_blank"><img src="img/c19homecareE.jpg" alt="Home care guidlines for covid19" class="imgzoom"></a></p>
+
+
+					</details>
 				<hr>
 				<h2 id="c19hospital" style="text-decoration: underline;">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
 				 	<div class="clinic">
