--- a/covid-19.html
+++ b/covid-19.html
@@ -80,6 +80,7 @@
 				<hr>
 				<h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
 						<ul>
+							<li><a href="tel:+08394 200108" target="_blank"><i class="fas fa-phone-alt"></i>Call</a> <br> Covid war Room Hospete </li> <br>
 							<li><a href="https://covid19.who.int/" target="_blank">WHO COVID Tracker</a></li> <br>
 							<li><a href="https://www.mygov.in/covid-19/" target="_blank">Gov of India Tracker</a></li> <br>
 							<li><a href="https://covid19.karnataka.gov.in/covid-dashboard/dashboard.html" target="_blank">ಕರ್ನಾಟಕ ಸರ್ಕಾರದ ಕೋವಿಡ್ DashBoard</a></li> <br>
