--- a/covid-19.html
+++ b/covid-19.html
@@ -112,7 +112,7 @@
 	        <li><a href="KotturuMediaHouse@gamil.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
-	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
+	        <li><a href="https://www.instagram.com/media_kotturu/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
 	        <li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
 	        <li><a href="https://github.com/NammaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
