--- a/covid-19.html
+++ b/covid-19.html
@@ -31,7 +31,7 @@
 			<aside class = "left">
         <ul> <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a> <br> <br> <br>
 					<li><a href="#announcments">ಮುನ್ನೆಚ್ಚರಿಕೆಯ ಪ್ರಕಟಣೆಗಳ</a> </li> <br>
-					<li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li> <br>
+					<!-- <li><a href="#c19hospital">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</a> </li> <br> -->
 					<li><a href="#resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</a></li> <br>
 					<li><a href="#other">ಇತರೆ</a> </li>
         </ul>
@@ -51,7 +51,7 @@
 
 					</details>
 				<hr>
-				<h2 id="c19hospital" style="text-decoration: underline;">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
+				<!-- <h2 id="c19hospital" style="text-decoration: underline;">ಕೋವಿಡ್ 19 ವಿಶೇಷ ಆಸ್ಪತ್ರೆ</h2>
 				 	<div class="clinic">
 						<div class="clm-1-1-1">
 							<p><a href="tel:+918660030840" target="_blank">
@@ -69,7 +69,7 @@
 							</details>
 						</div>
 						<div class="clm-1-2">
-							<img src="img/clinic/001/DrG1.1.png" alt="Dr Prashanth" class="profilepic">
+							<img src="      " alt="Dr Prashanth" class="profilepic">
 						</div>
 				 	</div>
 					<hr>
@@ -77,7 +77,7 @@
 						<p>Medication & Covid Rapid Antigen Test (RAT) is avilable <a href="tel:+918660030840" target="_blank">Call</a> </p>
 
 					</div>
-				<hr>
+				<hr> -->
 				<h2 id="resource">ಕೋವಿಡ್ ಸಂಪನ್ಮೂಲಗಳು</h2>
 						<ul>
 							<li><a href="tel:+08394 200108" target="_blank"><i class="fas fa-phone-alt"></i>Call</a> <br> Covid war Room Hospete </li> <br>
